# SimpleLowPassPlugin

./: .gitignore  CMakeLists.txt  GITHUB_SETUP.md  INSTALLATION_GUIDE.md  README.md
.github/workflows/: build-essential.yml  build-essential.yml.disabled  build.yml  windows-only.yml
Source/: SimpleLowPassAudioProcessor.cpp  SimpleLowPassAudioProcessor.h  SimpleLowPassAudioProcessorEditor.cpp  SimpleLowPassAudioProcessorEditor.h
